[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/SpriteSheets/Objects/sprite_trap_spike.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/Spikes/Spikes.gd" type="Script" id=2]
[ext_resource path="res://SFX/Character/switch1.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 440, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "activate",
"speed": 14.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": false,
"name": "disabled",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 9, 9 )

[node name="Spikes" type="Area2D" groups=["Trap"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "disabled"
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20, 20 )
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SpikeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.55
bus = "SFX"

[node name="SFXDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spikes_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SFXDelay" to="." method="_on_SFXDelay_timeout"]
